--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/lodash": "^4.14.182",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.2",
@@ -44,6 +45,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-i18next": "^11.16.9",
+    "react-intersection-observer": "^9.1.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-use": "^17.3.2",
